# SensiaAravis

./: CMakeLists.txt  Readme.md
cmake/: .clang-format  .clang-tidy  clang_setup.cmake
include/proyectoSensiaBridge/: header_file.h
src/: SensiaBridge.cpp  SensiaBridge.h  main.cpp
